--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,1 +1,27 @@
-<router-outlet></router-outlet>
+<div class="ui grid">
+
+    <div class="three wide column">
+
+        <div class="ui left visible vertical menu sidebar">
+            <app-sidebar></app-sidebar>    
+        </div>
+
+    </div>
+
+    <div class="thirteen wide stretched column">
+    
+        <div class="pusher">
+        
+            <app-menu></app-menu>
+    
+            <div class="ui container" style="padding: 8px 8px">
+                <div class="ui segment">
+                    <router-outlet></router-outlet>        
+                </div>
+            </div>
+    
+        </div>
+
+    </div>
+
+</div>
