Routes terminated, Design Rh 10%, 0% Controller, 0% Services

--- a/src/app/dashboard/configurations/type-rh/type-rh.component.html
+++ b/src/app/dashboard/configurations/type-rh/type-rh.component.html
@@ -1,3 +1,44 @@
-<p>
-  type-rh works!
-</p>
+<h2 class="ui center aligned icon header">
+  <i class="circular cogs icon"></i>
+  Tipo de Rh (Sangre)
+</h2>
+
+<div style="padding: 2.5rem 2.5rem">
+
+  <table class="ui striped small basic table">
+    <thead style="background: rgb(221, 217, 217);">
+      <tr>        
+        <th>Nombre</th>        
+        <th>Acciones</th>
+      </tr>
+    </thead>
+    <tbody>
+
+      <tr>        
+        <td>Plasma Tipo: &nbsp; &nbsp; <div class="ui red horizontal label">O+</div></td>   
+        <td>
+            <div class="ui icon small buttons">
+              <button class="ui yellow basic button">
+                <i class="edit icon"></i> Editar
+              </button>
+              <button class="ui red basic button">
+                <i class="trash icon"></i> Eliminar
+              </button>            
+            </div>
+        </td>     
+      </tr>
+
+    </tbody>
+    <tfoot class="full-width">
+      <tr>
+        <th></th>
+        <th colspan="2">
+          <div class="ui right floated small positive basic labeled icon button">
+            <i class="hand pointer outline icon"></i> Crear Rh
+          </div>          
+        </th>
+      </tr>
+    </tfoot>
+  </table>
+
+</div>
