--- a/src/app/dashboard/shared/menu/menu.component.html
+++ b/src/app/dashboard/shared/menu/menu.component.html
@@ -5,7 +5,7 @@
 
     <div class="right menu">        
         <div class="item">
-            <div class="ui primary button"> 
+            <div class="ui red button"> 
                 <i class="power off icon"></i> Salir 
             </div>
         </div>
