--- a/src/app/dashboard/shared/sidebar/sidebar.component.html
+++ b/src/app/dashboard/shared/sidebar/sidebar.component.html
@@ -4,21 +4,21 @@
     </a>
   </div>
 
-  <a class="item"> 
+  <a class="item" [routerLink]="['/dashboard/users']"> 
     <i class="users icon"></i> Usuarios 
   </a>
 
   <div class="item">
       <i class="paw icon"> </i> Animales
       <div class="menu">
-        <a class="item"> Lista General </a>
-        <a class="item"> Solicitudes de Adopción - Admin </a>        
+        <a class="item" [routerLink]="['/dashboard/animals']"> Lista General </a>
+        <a class="item"> Solicitudes de Adopción - Admin </a>
       </div>
   </div>
   <div class="item">
       <i class="handshake outline icon"> </i> Donaciones
       <div class="menu">
-        <a class="item"> Lista donaciones </a>
+        <a class="item" [routerLink]="['/dashboard/donations']"> Lista donaciones </a>
         <a class="item"> Generar donacion </a>
       </div>
   </div>
@@ -31,13 +31,13 @@
   <div class="item">
       <i class="cogs icon"> </i> Configuraciones
       <div class="menu">
-        <a class="item" [routerLink]="['/dashboard/config/type-breed']"> Raza     </a> 
-        <a class="item" [routerLink]="['/dashboard/config/type-animal']"> Animales </a>
+        <a class="item" [routerLink]="['/dashboard/config/type-breed']">    Raza          </a> 
+        <a class="item" [routerLink]="['/dashboard/config/type-animal']">   Animales      </a>
         <a class="item" [routerLink]="['/dashboard/config/type-medicine']"> Medicamentos  </a>
-        <a class="item" [routerLink]="['/dashboard/config/type-donation']"> Donacion  </a>
-        <a class="item" [routerLink]="['/dashboard/config/type-object']"> Objetos  </a>
-        <a class="item" [routerLink]="['/dashboard/config/type-rol']"> Roles  </a>
-        <a class="item" [routerLink]="['/dashboard/config/type-rh']"> Rh </a>
+        <a class="item" [routerLink]="['/dashboard/config/type-donation']"> Donacion      </a>
+        <a class="item" [routerLink]="['/dashboard/config/type-object']">   Objetos       </a>
+        <a class="item" [routerLink]="['/dashboard/config/type-rol']">      Roles         </a>
+        <a class="item" [routerLink]="['/dashboard/config/type-rh']">       Rh            </a>
       </div>
   </div>
   
