--- a/src/app/dashboard/configurations/type-breed/type-breed.component.html
+++ b/src/app/dashboard/configurations/type-breed/type-breed.component.html
@@ -1,3 +1,60 @@
-<p>
-  type-breed works!
-</p>
+<h2 class="ui center aligned icon header">
+    <i class="circular cogs icon"></i>
+    Tipo de Raza
+  </h2>
+  
+  <div style="padding: 2.5rem 2.5rem">
+  
+    <table class="ui striped small basic table">
+      <thead style="background: rgb(221, 217, 217);">
+        <tr>        
+          <th>Raza</th>        
+          <th>Tipo Animal</th>
+          <th>Acciones</th>
+        </tr>
+      </thead>
+      <tbody>
+  
+          <td>Tipo Objeto: &nbsp; &nbsp; <div class="ui green horizontal label"> Doberman </div></td>   
+          <td>Perro</td>
+          <td>
+              <div class="ui icon small buttons">
+                <button class="ui yellow basic button">
+                  <i class="edit icon"></i> Editar
+                </button>
+                <button class="ui red basic button">
+                  <i class="trash icon"></i> Eliminar
+                </button>            
+              </div>
+          </td>            
+  
+      </tbody>
+      <tfoot class="full-width">
+        <tr>
+          <th colspan="3">
+            <div class="ui right floated pagination menu">
+              <a class="icon item">
+                <i class="left chevron icon"></i>
+              </a>
+              <a class="item">1</a>
+              <a class="item">2</a>
+              <a class="item">3</a>
+              <a class="item">4</a>
+              <a class="icon item">
+                <i class="right chevron icon"></i>
+              </a>
+            </div>
+          </th>
+        </tr>
+        <tr>
+          <th></th>
+          <th colspan="2">   
+                <button class="ui right floated positive basic button">
+                  <i class="hand pointer outline icon"></i> Crear Raza
+                </button>                 
+          </th>
+        </tr>
+      </tfoot>
+    </table> 
+  
+  </div>
