--- a/src/app/dashboard/configurations/type-medicine/type-medicine.component.html
+++ b/src/app/dashboard/configurations/type-medicine/type-medicine.component.html
@@ -1,3 +1,44 @@
-<p>
-  type-medicine works!
-</p>
+<h2 class="ui center aligned icon header">
+    <i class="circular cogs icon"></i>
+    Tipo de Medicamentos
+  </h2>
+  
+  <div style="padding: 2.5rem 2.5rem">
+  
+    <table class="ui striped small basic table">
+      <thead style="background: rgb(221, 217, 217);">
+        <tr>        
+          <th>Nombre</th> 
+          <th>Presentación</th>         
+          <th>Acciones</th>
+        </tr>
+      </thead>
+      <tbody>
+  
+          <td>Tipo Medicamento: &nbsp; &nbsp; <div class="ui green horizontal label"> Acetaminofen, Ampolleta </div></td>   
+          <td>Unidad, Caja, Sobre, Frasco, Tableta, Inyectable</td> 
+          <td>
+              <div class="ui icon small buttons">
+                <button class="ui yellow basic button">
+                  <i class="edit icon"></i> Editar
+                </button>
+                <button class="ui red basic button">
+                  <i class="trash icon"></i> Eliminar
+                </button>            
+              </div>
+          </td>            
+  
+      </tbody>
+      <tfoot class="full-width">
+        <tr>
+          <th></th>
+          <th colspan="2">   
+                <button class="ui right floated positive basic button">
+                  <i class="hand pointer outline icon"></i> Crear Objeto
+                </button>                 
+          </th>
+        </tr>
+      </tfoot>
+    </table> 
+  
+  </div>
