--- a/src/app/dashboard/configurations/type-animal/type-animal.component.html
+++ b/src/app/dashboard/configurations/type-animal/type-animal.component.html
@@ -1,9 +1,27 @@
-<h2 class="ui center aligned icon header">
+  <h2 class="ui center aligned icon header">
     <i class="circular cogs icon"></i>
     Tipo de Animales
   </h2>
   
+
+
   <div style="padding: 2.5rem 2.5rem">
+
+    <!-- Form Editar -->
+    <div class="ui segment">
+      <form class="ui form">
+        <div class="two fields">
+          <div class="field">
+            <label>Tipo de Animal</label>
+            <input placeholder="First Name" type="text">
+          </div>                
+          <div class="field" style="margin-top: 26px"> 
+            <button type="submit" class="ui small button"> Ok, Guardar! </button>        
+          </div>
+        </div>        
+      </form>
+    </div>
+    <!-- Form Editar -->
   
     <table class="ui striped small basic table">
       <thead style="background: rgb(221, 217, 217);">
@@ -35,9 +53,7 @@
                 <i class="left chevron icon"></i>
               </a>
               <a class="item">1</a>
-              <a class="item">2</a>
-              <a class="item">3</a>
-              <a class="item">4</a>
+              <a class="item">2</a>              
               <a class="icon item">
                 <i class="right chevron icon"></i>
               </a>
