--- a/src/app/dashboard/configurations/type-breed/type-breed.component.html
+++ b/src/app/dashboard/configurations/type-breed/type-breed.component.html
@@ -5,6 +5,32 @@
   
   <div style="padding: 2.5rem 2.5rem">
   
+    <!-- Form Editar & Crear -->
+    <div class="ui segment">
+        <form class="ui form">
+          <div class="three fields">
+            <div class="field">
+              <label>Nombre de Raza</label>
+              <input name="name" placeholder="Ej: Doberman, Pitbull, Gato Australiano" type="text" >
+            </div>                
+            <div class="field">
+              <label>Tipo de Animal</label>
+              <select name="presentation" id="" class="ui search dropdown">
+                <option value="">Selecciona alguna por favor</option>
+                <option value="1">Perro</option>
+                <option value="2">Gato</option>
+                <option value="3">..etc</option>                
+              </select>
+            </div>                
+            
+                         
+          </div>        
+  
+          <button type="submit" class="ui small button"> Ok, Guardar! </button>        
+        </form>
+      </div>
+      <!-- Form Editar & Crear -->
+
     <table class="ui striped small basic table">
       <thead style="background: rgb(221, 217, 217);">
         <tr>        
@@ -37,23 +63,13 @@
                 <i class="left chevron icon"></i>
               </a>
               <a class="item">1</a>
-              <a class="item">2</a>
-              <a class="item">3</a>
-              <a class="item">4</a>
+              <a class="item">2</a>              
               <a class="icon item">
                 <i class="right chevron icon"></i>
               </a>
             </div>
           </th>
-        </tr>
-        <tr>
-          <th></th>
-          <th colspan="2">   
-                <button class="ui right floated positive basic button">
-                  <i class="hand pointer outline icon"></i> Crear Raza
-                </button>                 
-          </th>
-        </tr>
+        </tr>        
       </tfoot>
     </table> 
   
