--- a/src/app/dashboard/configurations/type-donation/type-donation.component.html
+++ b/src/app/dashboard/configurations/type-donation/type-donation.component.html
@@ -4,7 +4,23 @@
   </h2>
   
   <div style="padding: 2.5rem 2.5rem">
-  
+    
+    <!-- Form Editar -->
+    <div class="ui segment">
+      <form class="ui form">
+        <div class="two fields">
+          <div class="field">
+            <label>Tipo de Donation</label>
+            <input placeholder="Tipo de Raza" type="text" name="name">
+          </div>                
+          <div class="field" style="margin-top: 26px"> 
+            <button type="submit" class="ui small button"> Ok, Guardar! </button>        
+          </div>
+        </div>        
+      </form>
+    </div>
+    <!-- Form Editar -->
+
     <table class="ui striped small basic table">
       <thead style="background: rgb(221, 217, 217);">
         <tr>        
@@ -29,13 +45,19 @@
       </tbody>
       <tfoot class="full-width">
         <tr>
-          <th></th>
-          <th colspan="2">   
-                <button class="ui right floated positive basic button">
-                  <i class="hand pointer outline icon"></i> Crear Objetos
-                </button>                 
-          </th>
-        </tr>
+            <th colspan="3">
+              <div class="ui right floated pagination menu">
+                <a class="icon item">
+                  <i class="left chevron icon"></i>
+                </a>
+                <a class="item">1</a>
+                <a class="item">2</a>              
+                <a class="icon item">
+                  <i class="right chevron icon"></i>
+                </a>
+              </div>
+            </th>
+          </tr>         
       </tfoot>
     </table> 
   
