esto lo hizo oso, commit antes de irse por un gato

--- a/src/app/dashboard/configurations/type-animal/type-animal.component.html
+++ b/src/app/dashboard/configurations/type-animal/type-animal.component.html
@@ -13,7 +13,7 @@
         <div class="two fields">
           <div class="field">
             <label>Tipo de Animal</label>
-            <input placeholder="First Name" type="text">
+            <input placeholder="Ej: Perro, Gato" type="text">
           </div>                
           <div class="field" style="margin-top: 26px"> 
             <button type="submit" class="ui small button"> Ok, Guardar! </button>        
@@ -59,15 +59,7 @@
               </a>
             </div>
           </th>
-        </tr>
-        <tr>
-          <th></th>
-          <th colspan="2">   
-                <button class="ui right floated positive basic button">
-                  <i class="hand pointer outline icon"></i> Crear Tipo Animal
-                </button>                 
-          </th>
-        </tr>
+        </tr>        
       </tfoot>
     </table> 
   
