--- a/src/app/dashboard/configurations/type-donation/type-donation.component.html
+++ b/src/app/dashboard/configurations/type-donation/type-donation.component.html
@@ -10,8 +10,8 @@
       <form class="ui form">
         <div class="two fields">
           <div class="field">
-            <label>Tipo de Donation</label>
-            <input placeholder="Tipo de Raza" type="text" name="name">
+            <label>Tipo de Donación</label>
+            <input placeholder="Ej: Dinero" type="text" name="name">
           </div>                
           <div class="field" style="margin-top: 26px"> 
             <button type="submit" class="ui small button"> Ok, Guardar! </button>        
