--- a/src/app/dashboard/configurations/type-object/type-object.component.html
+++ b/src/app/dashboard/configurations/type-object/type-object.component.html
@@ -5,6 +5,33 @@
   
   <div style="padding: 2.5rem 2.5rem">
   
+    <!-- Form Editar -->
+    <div class="ui segment">
+      <form [formGroup]="formTypeObject"  class="ui form">
+        <div class="two fields">
+          <div class="field">
+            <label>Tipo de Objeto</label>
+            <input placeholder="Ej: Collar genérico, Bozal para perro, Pelota ..." type="text" name="name" formControlName="name">
+            <div class="ui pointing label" *ngIf="!formTypeObject.controls.name.valid">
+              Escribe algo aqui, por favor!
+            </div>
+          </div>                
+          <div 
+            (click)="saveTypeObject()" 
+            *ngIf="create" class="field" style="margin-top: 26px"> 
+            <button type="submit" class="ui small button" [disabled]="!formTypeObject.valid"> Ok, Guardar! </button>        
+          </div>
+          <div *ngIf="!create" class="field" style="margin-top: 26px"> 
+            <button 
+              (click)="actualizarTypeObject()"
+              type="submit" 
+              class="ui small button" [disabled]="!formTypeObject.valid"> Ok, Editar! </button>        
+          </div>
+        </div>        
+      </form>
+    </div>
+    <!-- Form Editar -->
+
     <table class="ui striped small basic table">
       <thead style="background: rgb(221, 217, 217);">
         <tr>        
@@ -12,12 +39,12 @@
           <th>Acciones</th>
         </tr>
       </thead>
-      <tbody>
+      <tbody *ngFor="let object of typeObjects ">
   
-          <td>Tipo Objeto: &nbsp; &nbsp; <div class="ui green horizontal label"> Correa, Plato de Comida, Collar ... </div></td>   
+          <td>Tipo Objeto: &nbsp; &nbsp; <div class="ui green horizontal label"> {{ object.name }} </div></td>   
           <td>
               <div class="ui icon small buttons">
-                <button class="ui yellow basic button">
+                <button class="ui yellow basic button" (click)="editTypeObject(object)">
                   <i class="edit icon"></i> Editar
                 </button>
                 <button class="ui red basic button">
@@ -29,13 +56,19 @@
       </tbody>
       <tfoot class="full-width">
         <tr>
-          <th></th>
-          <th colspan="2">   
-                <button class="ui right floated positive basic button">
-                  <i class="hand pointer outline icon"></i> Crear Objeto
-                </button>                 
+          <th colspan="3">
+            <div class="ui right floated pagination menu">
+              <a class="icon item">
+                <i class="left chevron icon"></i>
+              </a>
+              <a class="item">1</a>
+              <a class="item">2</a>              
+              <a class="icon item">
+                <i class="right chevron icon"></i>
+              </a>
+            </div>
           </th>
-        </tr>
+        </tr> 
       </tfoot>
     </table> 
   
